loopdowhile.Poucet2.scala.code
var comp:Int= 0
while (!sortietrouvee()){
do{ 
  avance()
  
  if (estSurBiscuit()){
      comp=comp+1
  }
 
}while (!crossing())
 
if (comp<=2){
   droite()
} else{ 
  gauche()
 
  }
}